Second Commit ClassJAN23CA

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <i class="bi bi-emoji-smile-upside-down"></i>
               </p>
               <a id="liveToastBtn" href="#" class="btn btn-primary">Like</a>
+              <a id="boredBtn" href="#" class="btn btn-primary">I'm Bored</a>
             </div>
           </div>
         </div>
@@ -184,6 +185,7 @@
             <p>Feel free to contact me.</p>
           </div>
         </div>
+        <button onclick="contactBtn()" type="button" class="btn btn-success btn-lg">Add your info</button>
         <div id="contactDetails" class="row mt-5">
           <div class="col-md-4">
             <div class="r-icon"> <i class="bi bi-telephone"></i></div>
@@ -259,6 +261,10 @@
   <script src="./js/typed.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/filters.js"></script>
+  <script src="./js/welcome.js"></script>
+  <script src="./js/table.js"></script>
+  <script src="./js/aboutMe.js"></script>
+  <script src="./js/contact.js"></script>
 </body>
 
 </html>
