Final Commit JAN23CA

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
   <script src="./js/table.js"></script>
   <script src="./js/aboutMe.js"></script>
   <script src="./js/contact.js"></script>
+  <script src="./js/accessibility.js"></script>
 </body>
 
 </html>
